# bro-cli

./: .gitignore  ABOUT.md  Cargo.toml  EXECUTION PLAN.md  EXTENSIONS.md  LICENSE.MD  README.md  ReadMe.md  add.py  bro.bat  bro.py  bro.sh  config.py  constants.py  db.py  install.ps1  install.sh  main_db.db  remove.py  schema.sql  update.py
.github/workflows/: release.yml
db/: connector.py
py_scripts/: cp_hw.py  line_count.py
src/: classify.rs  cli.rs  config.rs  main.rs  resolve.rs  stats.rs
src/commands/: add.rs  completions.rs  edit.rs  info.rs  init.rs  list.rs  mod.rs  paths.rs  pick.rs  remove.rs  search.rs  update.rs
src/exec/: mod.rs
src/shell/: cmd.rs  mod.rs  posix.rs  powershell.rs
src/store/: mod.rs  model.rs  toml_store.rs
